--- a/assets/css/v-termynal.css
+++ b/assets/css/v-termynal.css
@@ -26,3 +26,10 @@ html.dark .terminal {
 .v-termynal .vt__line {
   @apply leading-normal;
 }
+
+.terminal .prompt::before {
+  /* content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='100' cy='50' r='40' stroke='black' stroke-width='2' fill='red'/%3E%3Cpolyline points='20,20 40,25 60,40 80,120 120,140 200,180' style='fill:none;stroke:black;stroke-width:3'/%3E%3C/svg%3E "); */
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 -3 1 25' height='32px' width='10px'%3E%3Cpath d='M0 0L3 3L0 6' fill='none' stroke='%23f00000' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3C/path%3E%3C/svg%3E");
+  height: 14px;
+  @apply !text-rose-500;
+}
