--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,11 @@
 @import 'components.css';
 @import 'utilities.css';
 @import 'v-termynal.css';
+
+body {
+  @apply bg-white dark:bg-slate-900;
+}
+
+.doc {
+  @apply text-slate-700 dark:text-slate-300;
+}
