build: prepare for nuxt/tailwind

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11,3 +11,7 @@ body {
 .doc {
   @apply text-slate-700 dark:text-slate-300;
 }
+
+.prose pre {
+  @apply bg-slate-50 dark:bg-slate-800 text-sm;
+}
