feat: spy the scrolling of the documentation

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,10 +8,13 @@ body {
   @apply bg-white dark:bg-slate-900;
 }
 
+html {
+  @apply scroll-smooth;
+}
 .doc {
   @apply text-slate-700 dark:text-slate-300;
 }
 
 .prose pre {
-  @apply bg-slate-50 dark:bg-slate-800 text-sm;
+  @apply bg-slate-50 text-sm dark:bg-slate-800;
 }
