--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,3 +3,52 @@
 @import 'components.css';
 @import 'utilities.css';
 @import 'v-termynal.css';
+
+body {
+  @apply bg-white dark:bg-slate-900;
+}
+
+html {
+  @apply scroll-smooth;
+}
+.doc {
+  @apply text-slate-700 dark:text-slate-300;
+}
+
+.shiki .line {
+  @apply leading-5;
+}
+
+.shiki .line {
+  @apply inline-block;
+}
+
+:root {
+  --shiki-color-background: #00000000;
+  --shiki-token-keyword: var(--color-sky-700);
+  --shiki-token-comment: var(--color-slate-300);
+  --shiki-token-punctuation: var(--color-slate-400);
+  --shiki-token-function: var(--color-teal-600);
+  --shiki-token-constant: var(--color-slate-800);
+  --shiki-color-text: var(--color-slate-600);
+  --shiki-token-string-expression: var(--color-rose-700);
+  --shiki-token-string: var(--color-green-600);
+  --line-numbers: var(--color-slate-300);
+
+  --shiki-token-parameter: #aa00ee;
+  --shiki-token-link: #00eeee;
+
+}
+
+html.dark {
+  --shiki-color-background: #00000000;
+  --shiki-token-keyword: var(--color-sky-300);
+  --shiki-token-comment: var(--color-slate-600);
+  --shiki-token-punctuation: var(--color-slate-700);
+  --shiki-token-function: var(--color-teal-400);
+  --shiki-token-constant: var(--color-slate-200);
+  --shiki-color-text: var(--color-slate-300);
+  --shiki-token-string-expression: var(--color-rose-300);
+  --line-numbers: var(--color-slate-600);
+  --shiki-token-string: var(--color-green-400);
+}
